--- a/content/templates/content/home.html
+++ b/content/templates/content/home.html
@@ -60,7 +60,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h3><img src="{% static 'img/logo.jpeg' %}" class="title-img"/>آخرین محصولات</h3>
+        <h3>آخرین محصولات</h3>
       </div>
     </div>
     <div class="row">
