--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -730,7 +730,7 @@ footer .copyright {
 
 footer {
   background-color: #eceff1;
-  padding-top: 30px;
+  /* padding-top: 30px; */
   border-top: 1px solid #cccfd0;
 }
 
