--- a/templates/base.html
+++ b/templates/base.html
@@ -184,7 +184,7 @@
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
                                         <a class="dropdown-item" href="product_list.html"> لیست محصولات</a>
-                                        <a class="dropdown-item" href="single-product.html">جزئیات محصولات</a>
+                                    
                                         
                                     </div>
                                 </li>
@@ -197,7 +197,7 @@
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
                                         <a class="dropdown-item" href="blog.html"> وبلاگ</a>
-                                        <a class="dropdown-item" href="single-blog.html">صفحه داخلی وبلاگ </a>
+                                      
                                     </div>
                                 </li>
                                
@@ -255,22 +255,26 @@
         <div class="footer_iner">
             <div class="container">
                 <div class="row justify-content-between align-items-center">
-                    <div class="col-lg-8">
+                    <div class="col-lg-9">
                         <div class="footer_menu">
                             <div class="footer_logo">
-                                <a href="index.html"><img style="width:200px" src="{% static 'img/footer-logo.png' %}" alt="#"></a>
+                                <a href="index.html"><img style="
+                                  width: 230px;
+                                  position: relative;
+                                  top: -85px;
+"                               src="{% static 'img/footer-logo.png' %}" alt="#"></a>
                             </div>
                             <div class="footer_menu_item">
                                 <a href="index.html">صفحه اصلی</a>
 
                                 <a href="product_list.html">محصولات</a>
-                                <a href="#">صفحات</a>
+                              
                                 <a href="blog.html">وبلاگ</a>
                                 <a href="contact.html">تماس با ما</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-3">
                         <div class="social_icon">
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
                             <a href="#"><i class="fab fa-instagram"></i></a>
