--- a/templates/base.html
+++ b/templates/base.html
@@ -347,7 +347,7 @@
     <script src="{% static 'js/jquery.magnific-popup.js' %}"></script>
     <!-- carousel js -->
 
-    <script src="{% static 'js/jquery.nice-select.min.js' %}"></script>
+    {% comment %} <script src="{% static 'js/jquery.nice-select.min.js' %}"></script> {% endcomment %}
     <!-- slick js -->
     <script src="{% static 'js/slick.min.js' %}"></script>
     <script src="{% static 'js/jquery.counterup.min.js' %}"></script>
