--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2843,10 +2843,10 @@ box-shadow: 1px 1px 4px 2px #7b7b7b;
   text-align: center;
   /* border: 1px solid #E4D3DF; */
   padding: 35px;
-  color: #fff;
+  color: #1d1d1d !im;
   border-radius: 4px;
   margin: 10px 0;
-  /* background-color: #F89714; */
+  /* background-color: #F89714;*/
 
 }
 
