--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1636,7 +1636,7 @@ width:100% !important;
   border:1px solid red;;
 }
 .bg-orange{
- background-color: #f89714
+ background-color: #fff
 }
 .box {
   background-color:green;
