--- a/templates/base.html
+++ b/templates/base.html
@@ -162,7 +162,7 @@
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"> <img class="logo" src="{% static 'img/logo.jpeg' %}" alt="logo"> </a>
+                        <a class="navbar-brand" href="{% url 'content:home' %}"> <img class="logo" src="{% static 'img/logo.jpeg' %}" alt="logo"> </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -172,12 +172,12 @@
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html">صفحه اصلی</a>
+                                    <a class="nav-link" href="{% url 'content:home' %}">صفحه اصلی</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="about.html">درباره ما</a>
                                 </li>
-                                <li class="nav-item dropdown">
+                                <!-- <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_1"
                                         role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         محصولات
@@ -187,20 +187,20 @@
                                     
                                         
                                     </div>
-                                </li>
+                                </li> -->
                                
-                                
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_2"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        وبلاگ
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                                        <a class="dropdown-item" href="blog.html"> وبلاگ</a>
-                                      
-                                    </div>
+                                <li class="nav-item active">
+                                  <a
+                                    class="nav-link"
+                                    href="{% url 'content:categories' %}"
+                                  >دسته بندی محصولات <span class="sr-only">(current)</span></a>
                                 </li>
-                               
+                                <li class="nav-item active">
+                                  <a
+                                    class="nav-link"
+                                    href="{% url 'blog:home' %}"
+                                  >بلاگ <span class="sr-only">(current)</span></a>
+                                </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact.html">تماس با ما</a>
                                 </li>
@@ -258,14 +258,14 @@
                     <div class="col-lg-9">
                         <div class="footer_menu">
                             <div class="footer_logo">
-                                <a href="index.html"><img style="
+                                <a href="{% url 'content:home' %}"><img style="
                                   width: 230px;
                                   position: relative;
                                   top: -85px;
 "                               src="{% static 'img/footer-logo.png' %}" alt="#"></a>
                             </div>
                             <div class="footer_menu_item">
-                                <a href="index.html">صفحه اصلی</a>
+                                <a href="{% url 'content:home' %}">صفحه اصلی</a>
 
                                 <a href="product_list.html">محصولات</a>
                               
