--- a/templates/base.html
+++ b/templates/base.html
@@ -208,7 +208,7 @@
                         </div>
                         <div class="hearer_icon d-flex align-items-center">
                             <a id="search_1" href="javascript:void(0)"><i class="fa fa-search"></i></a>
-                            <a href="cart.html">
+                            <a href="{% url 'cart:showcart' %}">
                                 <i class="flaticon-shopping-cart-black-shape"></i>
                             </a>
                         </div>
