--- a/content/templates/content/products.html
+++ b/content/templates/content/products.html
@@ -160,4 +160,26 @@
   {% endfor %} {% endcomment %}
 </div>
 
+{% if all_products.has_other_pages %}
+  <ul class="pagination">
+    {% if all_products.has_previous %}
+      <li><a href="{{ request.get_full_path }}?page={{ all_products.previous_page_number }}">&laquo;</a></li>
+    {% else %}
+      <li class="disabled"><span>&laquo;</span></li>
+    {% endif %}
+    {% for i in all_products.paginator.page_range %}
+      {% if all_products.number == i %}
+        <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+      {% else %}
+        <li><a href="{{ request.get_full_path }}?page={{ i }}">{{ i }}</a></li>
+      {% endif %}
+    {% endfor %}
+    {% if all_products.has_next %}
+      <li><a href="{{ request.get_full_path }}?page={{ all_products.next_page_number }}">&raquo;</a></li>
+    {% else %}
+      <li class="disabled"><span>&raquo;</span></li>
+    {% endif %}
+  </ul>
+{% endif %}
+
 {% endblock %}
