--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -52,7 +52,7 @@
 
 					<div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
 						{{form.username|add_class:"input100"}}
-						<span class="focus-input100" data-placeholder="نام کاربری"></span>
+						<span class="focus-input100" data-placeholder="ایمیل"></span>
 						{% if form.username.errors %}
 							<div class="myerrors">
 								{{form.username.errors}}
