--- a/content/templates/content/aboutus.html
+++ b/content/templates/content/aboutus.html
@@ -13,7 +13,7 @@
           </div>
       </div>
   </section>
-  <section class="parallex-section" style="background-image:url('{% static 'img/about.jpg' %}')">
+  <section class="parallex-section" style="background-image:url('{% static "img/about.jpg" %}')">
   <!-- <img src="{% static 'img/about.jpg' %}" alt=""> -->
   </section>
   <section class="client_review">
