--- a/content/templates/content/aboutus.html
+++ b/content/templates/content/aboutus.html
@@ -13,10 +13,7 @@
           </div>
       </div>
   </section>
-  <section class="parallex-section" style="background-image:url('{% static "img/about.jpg" %}')">
-  <!-- <img src="{% static 'img/about.jpg' %}" alt=""> -->
-  </section>
-  <section class="client_review">
+    <section class="client_review">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8">
@@ -39,7 +36,7 @@
                         <div class="client_img">
                             <img src="{% static 'img/people2.jpg' %}" alt="#" class="img-fluid">
                         </div>
-                        <p>وی نظری نداشت ...</p>
+                        <p>در روند این پروژه خیلی چیزها یاد گرفتم</p>
                         <h5>محمد دنیوی </h5>
                     </div>
                 </div>
@@ -47,6 +44,10 @@
         </div>
     </div>
 </section>
+  <section class="parallex-section" style="background-image:url('{% static "img/about.jpg" %}')">
+  <!-- <img src="{% static 'img/about.jpg' %}" alt=""> -->
+  </section>
+
   </body>
 
 {%endblock%}
