--- a/content/templates/content/categories.html
+++ b/content/templates/content/categories.html
@@ -185,7 +185,7 @@
           <div class="col-md-2">
 
             <form
-              class="form-filter"
+              class="form-filter sidebar-form"
               action="{% url 'content:products' cat.id %}"
               method="GET"
             >
@@ -193,8 +193,7 @@
               {% comment %} {{ checked_attr.'ساید بای ساید' }} {% endcomment %}
 
               {% for attr, vlst in uniqdict.items %}
-              <br>{{ attr.attr_title }}
-
+              <br><h6>{{ attr.attr_title }}</h6>
 
 
               <ul class="pright-0">
@@ -299,8 +298,8 @@
               {% endfor %}
               <input
                 type="submit"
-                value="Submit"
-                class="btn btn-primary"
+                value="ثبت"
+                class="btn btn-success"
               >
             </form>
 
