--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2640,7 +2640,7 @@ box-shadow: 1px 1px 4px 2px #7b7b7b;
   z-index: -10;
 }
 .single_product_item h5 a{
-  font-size: 14px;
+  font-size: 12px;
   text-decoration: none;
   background-color: #5EB341;
   display: block;
@@ -2648,6 +2648,7 @@ box-shadow: 1px 1px 4px 2px #7b7b7b;
   color: #fff;
   margin-top: 6px;
   position: relative;
+  min-height:50px;
  
   outline: 1px solid #fff;
   outline-offset: -4px;
@@ -2719,10 +2720,12 @@ box-shadow: 1px 1px 4px 2px #7b7b7b;
 }
 
 .client_review {
-  padding: 100px 0;
+  padding: 30px 0;
   text-align: center;
   background-color: #dea700;
   position: relative;
+  border-top:2px solid #fff;
+  border-bottom:2px solid #fff;
 }
 .parallex-section{
 
@@ -6806,6 +6809,14 @@ h6 {
   min-height: 28px;
   font-size: 12px;
   padding-left: 20px;
+}
+.sidebar-form{
+  border: 1px solid #ddd;
+    padding: 12px;
+}
+.sidebar-form h6{
+  border-bottom: 2px dotted #4fa746;
+  padding-bottom: 3px;
 }
 
 .default-select .nice-select .list .option.selected {
